# insipid-sphinx-theme

./: .editorconfig  .gitignore  .readthedocs.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NEWS.rst  README.rst  git_rebase_rtd_branches.sh  pyproject.toml  setup.py
.github/workflows/: main.yml  publish.yml
doc/: conf.py  configuration.rst  customization.rst  example_module.py  index.rst  intro.rst  requirements.txt  usage.rst
doc/_templates/: github-badge.html  layout.html
doc/showcase/: admonitions.rst  another-nested-document.rst  api-doc.rst  basic-formatting.rst  code-blocks.rst  different-sidebar.rst  further<br>nested"document.rst  images.rst  index.rst  lists.rst  math.rst  nested document.rst  no-sidebar.rst  quotes.rst  sections.rst  tables.rst
src/insipid_sphinx_theme/: __init__.py
src/insipid_sphinx_theme/insipid/: copyright.html  ethical-ad.html  footer.html  fullscreen-button.html  home.html  indices.html  last-updated.html  layout.html  page.html  pdf-button.html  readthedocs-embed-flyout.html  repo-button.html  search-button.html  separator.html  show-source.html  sidebar-button.html  sphinx.html  theme.conf
src/insipid_sphinx_theme/insipid/static/: insipid-sidebar-readthedocs.css_t  insipid-sidebar.js_t  insipid.css_t  insipid.js
